# email-address-list

./: Cargo.toml  README.md  appveyor.yml  tests
grammars/: permissive.pest  rfc5322-strict.pest
src/: address_list.rs  error.rs  lib.rs  parser.rs  permissive-email-list.pest  tests.rs
tests/: deep_eq.txt  email_address_list.rs  naughty-strings.txt
