[package]
name = "email-address-list"
version = "0.3.0"
authors = ["eaon <eaon@posteo.net>"]
description = "Pest based parser for address-lists in email headers like to/from/cc/etc."
repository = "https://codeberg.org/eaon/email-address-list/"
readme = "README.md"
license = "GPL-3.0"
keywords = ["email", "parser", "peg"]
categories = ["parser-implementations", "email"]
edition = "2021"

[dependencies]
lazy_static = "1"
pest = "2"
pest_derive = "2"
regex = "1"
mailparse = { version = "0.14", optional = true }

[features]
mailparse-conversions = ["mailparse"]
